--- a/index.html
+++ b/index.html
@@ -112,21 +112,21 @@
                 <div class="col-md-12">
                     <div class="owl-carousel owl-theme">
                         <div class="item">
-                            <a href="services-page.html"> <span class="icon et-laptop"></span>
+                            <a href="links/services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
                                 <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view)</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="services-page.html"> <span class="icon et-desktop"></span>
+                            <a href="links/services-page.html"> <span class="icon et-desktop"></span>
                                 <h5>Back-end Development</h5>
                                 <p>I'm currently taking a PHP and SQL database Management course to advance my knowledge in backend technologies</p>
                                 <div class="numb">02</div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="services-page.html"> <span class="icon et-browser"></span>
+                            <a href="links/services-page.html"> <span class="icon et-browser"></span>
                                 <h5>Data Management and Analysis</h5>
                                 <p>I am familiar with database technologies like mySQL and data analysis at an intermediate level and I'm willing to learn on the job </p>
                                 <div class="numb">03</div>
@@ -215,67 +215,67 @@
                 <div class="col-md-12">
                     <div class="owl-carousel owl-theme">
                         <div class="item">
-                            <a href="portfolio-page.html">
+                            <a href="links/portfolio.html">
                                 <div class="img-block">
-                                    <div class="wrapper-img"> <img src="images/portfolio/policify2.jpg" class="img-fluid"> </div>
+                                    <div class="wrapper-img"> <img src="images/portfolio/nft-home.jpg" class="img-fluid"> </div>
                                     <div class="title-block">
-                                        <h4>Lab. 001</h4>
+                                        <h4>NFT website template</h4>
                                         <p>Website Design</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="portfolio-page.html">
+                            <a href="links/portfolio.html">
                                 <div class="img-block">
-                                    <div class="wrapper-img"> <img src="images/portfolio/nft.jpg" class="img-fluid"> </div>
+                                    <div class="wrapper-img"> <img src="images/portfolio/prime.jpg" class="img-fluid"> </div>
                                     <div class="title-block">
-                                        <h4>Aer Agency</h4>
-                                        <p>Website / Development</p>
+                                        <h4>Manga Collection Library</h4>
+                                        <p>Website design</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="portfolio-page.html">
+                            <a href="links/portfolio.html">
                                 <div class="img-block">
-                                    <div class="wrapper-img"> <img src="images/portfolio/prime2.jpg" class="img-fluid"> </div>
+                                    <div class="wrapper-img"> <img src="images/portfolio/nft-landing.jpg" class="img-fluid"> </div>
                                     <div class="title-block">
-                                        <h4>Photography brand website</h4>
-                                         
+                                        <h4>Digital Arts Website</h4>
+                                         <p>Web Design</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="portfolio-page.html">
+                            <a href="links/portfolio.html">
                                 <div class="img-block">
-                                    <div class="wrapper-img"> <img src="images/portfolio/manga3.jpg" class="img-fluid"> </div>
+                                    <div class="wrapper-img"> <img src="images/portfolio/manga.jpg" class="img-fluid"> </div>
                                     <div class="title-block">
-                                        <h4>Peaky Blinders</h4>
-                                        <p>Website / UX Design</p>
+                                        <h4>Library Site</h4>
+                                        <p>Web Design</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="portfolio-page.html">
+                            <a href="links/portfolio.html">
                                 <div class="img-block">
-                                    <div class="wrapper-img"> <img src="images/portfolio/5.jpg" class="img-fluid"> </div>
+                                    <div class="wrapper-img"> <img src="images/portfolio/policify.jpg" class="img-fluid"> </div>
                                     <div class="title-block">
-                                        <h4>Design Zoom</h4>
-                                        <p>Branding / Design</p>
+                                        <h4>Corporate Website</h4>
+                                        <p>Web Design</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="item">
-                            <a href="portfolio-page.html">
+                            <a href="links/portfolio.html">
                                 <div class="img-block">
-                                    <div class="wrapper-img"> <img src="images/portfolio/6.jpg" class="img-fluid"> </div>
+                                    <div class="wrapper-img"> <img src="images/portfolio/manga-collection.jpg" class="img-fluid"> </div>
                                     <div class="title-block">
-                                        <h4>Out Zone</h4>
-                                        <p>UX Design / Web App</p>
+                                        <h4>Comics Collection</h4>
+                                        <p>Web Design</p>
                                     </div>
                                 </div>
                             </a>
