--- a/links/blog.html
+++ b/links/blog.html
@@ -293,7 +293,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>Enugu, Nigeria</p>
+                    <p>Enugu — Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
