--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nilsa Brown</title>
+    <title>Jesse Nnorom</title>
     <link rel="icon" type="image/png" href="../images/favicon.png" />
     <link rel="stylesheet" href="../https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
     <link rel="stylesheet" href="../css/plugins.css" />
@@ -59,18 +59,18 @@
                     <h1 class="wow" data-splitting>Portfolio</h1>
                 </div>
                 <div class="col-md-7 offset-md-1 mt-45">
-                    <p class="wow fadeInUp" data-wow-delay=".6s">Having a background in freelancing, I have worked on personal projects as well as projects for clients, working remotely with teams. I build responsive and minimalist websites designed for efficiency while not compromising on aesthetics</p>
+                    <p class="wow fadeInUp" data-wow-delay=".6s">Having a background in freelancing, I have worked on personal projects as well as projects for clients, working remotely with teams. I build responsive and minimalist websites designed for efficiency while not compromising on aesthetics. I also have a keen interest in Arts. I write <a href="blog.html">blogs</a> and think pieces too.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/1.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/nft-home.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
-                                    <h4>Lab. 001</h4>
-                                    <p>Website Design</p>
+                                    <h4>Digital Arts Website</h4>
+                                    <p>Web Design</p>
                                 </div>
                             </div>
                         </a>
@@ -78,12 +78,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/2.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/prime.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
-                                    <h4>Aer Agency</h4>
-                                    <p>Website / Development</p>
+                                    <h4>Photography Company</h4>
+                                    <p>Website Development</p>
                                 </div>
                             </div>
                         </a>
@@ -91,12 +91,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/3.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/nft-landing.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
-                                    <h4>Joker Card</h4>
-                                    <p>UX Design / Web App</p>
+                                    <h4>Digital Arts Website</h4>
+                                    <p>Web Design</p>
                                 </div>
                             </div>
                         </a>
@@ -104,12 +104,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/4.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/manga.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
-                                    <h4>Peaky Blinders</h4>
-                                    <p>Website / UX Design</p>
+                                     <h4>Library Site</h4>
+                                        <p>Web Design</p>
                                 </div>
                             </div>
                         </a>
@@ -117,12 +117,12 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/5.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/policify.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
-                                    <h4>Design Zoom</h4>
-                                    <p>Branding / Design</p>
+                                   <h4>Corporate Website</h4>
+                                    <p>Web Design</p>
                                 </div>
                             </div>
                         </a>
@@ -130,22 +130,22 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/6.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/manga-collection.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
-                                    <h4>Out Zone</h4>
-                                    <p>UX Design / Web App</p>
+                                   <h4>Comics Collection</h4>
+                                    <p>Web Design</p>
                                 </div>
                             </div>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
-                                <div class="wrapper-img"> <img src="../images/portfolio/7.jpg" class="img-fluid"> </div>
+                                <div class="wrapper-img"> <img src="../images/portfolio/manga-collection.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
                                     <h4>Jump High</h4>
                                     <p>Website / UX Design</p>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
                                 <div class="wrapper-img"> <img src="../images/portfolio/8.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item mb-30">
-                        <a href="portfolio-page.html">
+                        <a href="portfolio.html">
                             <div class="img-block">
                                 <div class="wrapper-img"> <img src="../images/portfolio/9.jpg" class="img-fluid"> </div>
                                 <div class="title-block">
@@ -179,7 +179,7 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>Enugu, Nigeria</p>
+                    <p>Enugu — Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
