--- a/links/post.html
+++ b/links/post.html
@@ -290,7 +290,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>Enugu, Nigeria</p>
+                    <p>Enugu — Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
