--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Locations</h5>
-                    <p>Nsukka, Nigeria</p>
+                    <p>Enugu — Nigeria</p>
                 </div>
                 <div class="col-md-4">
                     <ul class="nilsbrown-footer-social-link">
