--- a/links/about.html
+++ b/links/about.html
@@ -177,7 +177,7 @@
               and I'm willing to learn on the job
             </p>
             <p class="wow fadeInUp" data-wow-delay=".6s">
-              I use HTML, CSS, Bootstrap, Javascript, React, PHP and Laravel and
+              I use HTML, CSS, Bootstrap, Tailwind, Javascript, React, PHP and Laravel and
               I am willing and eager to learn more technologies
             </p>
           </div>
@@ -335,6 +335,13 @@
                   style="max-height: 50px; width: auto"
                 />
               </div>
+              <div class="clients-logo">
+                <img
+                  src="../images/clients/icons8-tailwind-css-48.png"
+                  alt=""
+                  style="max-height: 50px; width: auto"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -390,6 +397,6 @@
     <script src="../js/plugins/jquery.easing.1.3.js"></script>
     <script src="../js/plugins/smooth-scroll.min.js"></script>
     <script src="../js/plugins/wow.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="../js/custom2.js"></script>
   </body>
 </html>
