--- a/links/contact.html
+++ b/links/contact.html
@@ -236,7 +236,7 @@
     <script src="../js/plugins/jquery.easing.1.3.js"></script>
     <script src="../js/plugins/smooth-scroll.min.js"></script>
     <script src="../js/plugins/wow.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="../js/custom2.js"></script>
 </body>
 
 </html>
