--- a/links/services-page.html
+++ b/links/services-page.html
@@ -176,7 +176,7 @@
                         <div class="item">
                             <a href="services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
-                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view)</p>
+                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React(in-view)</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
@@ -279,6 +279,9 @@
                         <div class="clients-logo">
                             <img src="../images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
+                         <div class="clients-logo">
+                            <img src="../images/clients/icons8-tailwind-css-48.png" alt="" style="max-height:50px; width: auto;">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -316,7 +319,7 @@
     <script src="../js/plugins/jquery.easing.1.3.js"></script>
     <script src="../js/plugins/smooth-scroll.min.js"></script>
     <script src="../js/plugins/wow.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="../js/custom2.js"></script>
 </body>
 
 </html>
