--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                         <div class="item">
                             <a href="links/services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
-                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view)</p>
+                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React(in-view)</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
                         <div class="item">
                             <a href="links/services-page.html"> <span class="icon et-desktop"></span>
                                 <h5>Back-end Development</h5>
-                                <p>I'm currently taking a PHP and SQL database Management course to advance my knowledge in backend technologies</p>
+                                <p>I'm currently taking a PHP and SQL database Management course to advance my knowledge in backend technologies</p><br>
                                 <div class="numb">02</div>
                             </a>
                         </div>
@@ -406,6 +406,9 @@
                         </div>
                         <div class="clients-logo">
                             <img src="images/clients/php.png" alt="" style="max-height:50px; width: auto;">
+                        </div>
+                        <div class="clients-logo">
+                            <img src="images/clients/icons8-tailwind-css-48.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
