--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jesse Nnorom</title>
     <link rel="icon" type="image/png" href="../images/favicon.png" />
-    <link rel="stylesheet" href="../https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&amp;display=swap">
     <link rel="stylesheet" href="../css/plugins.css" />
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -249,6 +249,9 @@
                         <div class="clients-logo">
                             <img src="../images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
+                        <div class="clients-logo">
+                            <img src="../images/clients/icons8-tailwind-css-48.png" alt="" style="max-height:50px; width: auto;">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -286,7 +289,7 @@
     <script src="../js/plugins/jquery.easing.1.3.js"></script>
     <script src="../js/plugins/smooth-scroll.min.js"></script>
     <script src="../js/plugins/wow.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="../js/custom2.js"></script>
 </body>
 
 </html>
