--- a/links/services.html
+++ b/links/services.html
@@ -42,7 +42,7 @@
                 <!-- Logo -->
                 <div class="col-8 col-md-8">
                     <div class="logo-wrap">
-                        <a href="../index.html" class="logo"> <img src="../images/logo-dark.png" alt="" style="max-height:40px; width:70px"> </a>
+                        <a href="../index.html" class="logo"> <img src="../images/logo-slider-black.png" alt="" style="max-height:40px; width:70px"> </a>
                     </div>
                 </div>
                 <!-- Menu Burger -->
@@ -59,7 +59,7 @@
                     <h1 class="wow" data-splitting>Services</h1>
                 </div>
                 <div class="col-md-7 offset-md-1 mt-45">
-                    <p class="wow fadeInUp" data-wow-delay=".6s">I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view).</p>
+                    <p class="wow fadeInUp" data-wow-delay=".6s">I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React(in-view).</p>
                 </div>
             </div>
             <div class="row">
@@ -67,7 +67,7 @@
                     <a href="services-page.html">
                         <div class="item mb-30"> <a href="services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
-                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Javascript and React(in-view)</p>
+                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React(in-view)</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
@@ -185,7 +185,10 @@
                             <img src="../images/clients/php.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                         <div class="clients-logo">
-                            <img src="../images/clients/react.png" alt="" style="max-height:50px; width: auto;">
+                            <img src="../images/clients/react.png" alt="" style="max-height:50px; width: auto;">      
+                        </div>
+                        <div class="clients-logo">
+                            <img src="../images/clients/icons8-tailwind-css-48.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
@@ -224,7 +227,7 @@
     <script src="../js/plugins/jquery.easing.1.3.js"></script>
     <script src="../js/plugins/smooth-scroll.min.js"></script>
     <script src="../js/plugins/wow.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="../js/custom2.js"></script>
 </body>
 
 </html>
