--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                                     <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior developer proficient in backend technologies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies that make them work   <br>
                                     My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> for a variety of clients.</p>
                                 </div>
-                                <div class="btn-wrap text-center">
+                                <!-- <div class="btn-wrap text-center">
                                     <div class="btn-link"> <a href="#">Download CV <i class="ti-download"></i></a> <span class="btn-block color1 animation-bounce"></span> </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                         <div class="item">
                             <a href="links/services-page.html"> <span class="icon et-desktop"></span>
                                 <h5>Back-end Development</h5>
-                                <p>I'm currently taking a PHP and SQL database Management course to advance my knowledge in backend technologies</p><br>
+                                <p>I am a fan of server side technologies. I use PHP, Laravel and SQL for back-end development and data management.</p><br>
                                 <div class="numb">02</div>
                             </a>
                         </div>
@@ -359,7 +359,7 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="images/quot.png" alt=""></span>
+                                    <!-- <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="images/quot.png" alt=""></span> -->
                                     <div class="info">
                                         <div class="author-img"> <img src="images/team/1.jpg" alt=""> </div>
                                         <div class="cont">
@@ -368,7 +368,7 @@
                                     </div>
                                 </div>
                                 <div class="item"> <span class="quote"><img src="images/quot.png" alt=""></span>
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p>
+                                    <!-- <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> -->
                                     <div class="info">
                                         <div class="author-img"> <img src="images/team/2.jpg" alt=""> </div>
                                         <div class="cont">
@@ -409,6 +409,9 @@
                         </div>
                         <div class="clients-logo">
                             <img src="images/clients/icons8-tailwind-css-48.png" alt="" style="max-height:50px; width: auto;">
+                        </div>
+                        <div class="clients-logo">
+                            <img src="images/clients/icons8-laravel-100.png" alt="" style="max-height:50px; width: auto;">
                         </div>
                     </div>
                 </div>
