--- a/links/post.html
+++ b/links/post.html
@@ -225,7 +225,7 @@
                             <h5>What Are Clients Saying?</h5>
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="../images/quot.png" alt=""></span>
+                                    <!-- <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> <span class="quote"><img src="../images/quot.png" alt=""></span> -->
                                     <div class="info">
                                         <div class="author-img"> <img src="../images/team/1.jpg" alt=""> </div>
                                         <div class="cont">
@@ -234,7 +234,7 @@
                                     </div>
                                 </div>
                                 <div class="item"> <span class="quote"><img src="../images/quot.png" alt=""></span>
-                                    <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p>
+                                    <!-- <p>Dan entesque magna magna semper daibus elisan neca aliuen risus morbi tristique senectus et netus malesuada fames ac urpis egestas. Nullam miss muris ulvinar miss in the libero dictum.</p> -->
                                     <div class="info">
                                         <div class="author-img"> <img src="../images/team/2.jpg" alt=""> </div>
                                         <div class="cont">
