--- a/links/about.html
+++ b/links/about.html
@@ -71,7 +71,7 @@
             <h1 class="wow" data-splitting>I Create Digital Future.</h1>
             <p class="mt-45 wow fadeInUp" data-wow-delay=".3s">
               Hello! I’m Jesse and I enjoy creating things that live on the
-              internet. I am a creative developer proficient in backend
+              internet. I am a creative web developer also proficient in backend
               technologies like PHP and Laravel and I dream of making the world
               a better place by creating captivating products. My interest in
               web development started back in 2017 when I decided I love gadgets
@@ -143,7 +143,7 @@
                     <p>College</p>
                   </div>
                   <div class="item">
-                    <h5>GSS Pyakassa <span>2017 - 2019</span></h5>
+                    <h5>GSS Pyakassa, Abuja <span>2017 - 2019</span></h5>
                     <p>High School</p>
                   </div>
                   <div class="item">
@@ -242,10 +242,10 @@
                 <div class="owl-carousel owl-theme">
                   <div class="item">
                     <p>
-                      Dan entesque magna magna semper daibus elisan neca aliuen
+                      <!-- Dan entesque magna magna semper daibus elisan neca aliuen
                       risus morbi tristique senectus et netus malesuada fames ac
                       urpis egestas. Nullam miss muris ulvinar miss in the
-                      libero dictum.
+                      libero dictum. -->
                     </p>
                     <span class="quote"
                       ><img src="../images/quot.png" alt=""
@@ -265,10 +265,10 @@
                       ><img src="../images/quot.png" alt=""
                     /></span>
                     <p>
-                      Dan entesque magna magna semper daibus elisan neca aliuen
+                      <!-- Dan entesque magna magna semper daibus elisan neca aliuen
                       risus morbi tristique senectus et netus malesuada fames ac
                       urpis egestas. Nullam miss muris ulvinar miss in the
-                      libero dictum.
+                      libero dictum. -->
                     </p>
                     <div class="info">
                       <div class="author-img">
