--- a/links/about.html
+++ b/links/about.html
@@ -116,7 +116,11 @@
                 <div class="block">
                   <h4>Experience</h4>
                   <div class="item">
-                    <h5>Abia Tech Hub <span>2022 - present</span></h5>
+                    <h5>Scholarly <span>2023 - present</span></h5>
+                    <p>Web Developer</p>
+                  </div>
+                  <div class="item">
+                    <h5>Abia Tech Hub <span>2022 - 2023</span></h5>
                     <p>Intern and Web Developer</p>
                   </div>
                   <div class="item">
