--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="header-cont-text">
                                     <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior developer proficient in backend technologies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies that make them work   <br>
-                                    My main focus these days is building accessible, inclusive products and digital experiences at <a href="https://abiatechhub.com/">Abia Tech Hub</a> for a variety of clients.</p>
+                                    My main focus these days is building accessible, inclusive products and digital experiences at <a href="#">Scholarly</a> for a variety of clients.</p>
                                 </div>
                                 <!-- <div class="btn-wrap text-center">
                                     <div class="btn-link"> <a href="#">Download CV <i class="ti-download"></i></a> <span class="btn-block color1 animation-bounce"></span> </div>
@@ -114,7 +114,7 @@
                         <div class="item">
                             <a href="links/services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
-                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React(in-view)</p>
+                                <p>I enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript, jQuery and React(in-view)</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
