--- a/links/about.html
+++ b/links/about.html
@@ -78,7 +78,7 @@
               and the technologies behind them <br />
               My main focus these days is building accessible, inclusive
               products and digital experiences at
-              <a href="https://abiatechhub.com/">Abia Tech Hub</a> Hub for a
+              <a href="#">scholarly</a> Hub for a
               variety of clients.
             </p>
             <!-- <p class="wow fadeInUp" data-wow-delay=".6s">Fusce posuere quis sem quis efficitur. Etiam ac cursus lacus a retium arus crase eratodio congue a nulla quis iaculis laoreet risus.</p> -->
