--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="header-cont-text">
                                     <p class="wow" data-splitting>Hello! I’m Jesse and I enjoy creating things that live on the internet.  I am a creative junior developer proficient in backend technologies like PHP and Laravel and I dream of making the world a better place by creating captivating products. My interest in web development started back in 2017 when I decided I love gadgets and the technologies that make them work   <br>
-                                    My main focus these days is building accessible, inclusive products and digital experiences at <a href="#">Scholarly</a> for a variety of clients.</p>
+                                    My main focus these days is building accessible, inclusive products and digital experiences at <a href="#">Schorlarly</a> for a variety of clients.</p>
                                 </div>
                                 <!-- <div class="btn-wrap text-center">
                                     <div class="btn-link"> <a href="#">Download CV <i class="ti-download"></i></a> <span class="btn-block color1 animation-bounce"></span> </div>
