--- a/links/about.html
+++ b/links/about.html
@@ -78,7 +78,7 @@
               and the technologies behind them <br />
               My main focus these days is building accessible, inclusive
               products and digital experiences at
-              <a href="#">scholarly</a> Hub for a
+              <a href="#">schorlarly</a> Hub for a
               variety of clients.
             </p>
             <!-- <p class="wow fadeInUp" data-wow-delay=".6s">Fusce posuere quis sem quis efficitur. Etiam ac cursus lacus a retium arus crase eratodio congue a nulla quis iaculis laoreet risus.</p> -->
@@ -116,7 +116,7 @@
                 <div class="block">
                   <h4>Experience</h4>
                   <div class="item">
-                    <h5>Scholarly <span>2023 - present</span></h5>
+                    <h5>Schorlarly <span>2023 - present</span></h5>
                     <p>Web Developer</p>
                   </div>
                   <div class="item">
