--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="item">
                             <a href="links/services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
-                                <p>I enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript, jQuery and React(in-view)</p>
+                                <p>I enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript, jQuery and React.js</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
