--- a/links/services-page.html
+++ b/links/services-page.html
@@ -176,7 +176,7 @@
                         <div class="item">
                             <a href="services-page.html"> <span class="icon et-laptop"></span>
                                 <h5>Website Design</h5>
-                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React(in-view)</p>
+                                <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. I build and design websites with technologies like HTML, CSS, Bootstrap, Tailwind, Javascript and React.js</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
